--- a/about.html
+++ b/about.html
@@ -54,21 +54,19 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Shipping Services in Dubai | About INC SHIPPING" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/about" />
-    <meta property="og:description" content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and
-        Shipping Services in Dubai, offers exclusive services with exceptional quality." />
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/about" />
+<meta property="og:title" content="Shipping Services in Dubai | About INC SHIPPING" />
+<meta property="og:description" content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20310.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/about" />
-    <meta property="twitter:title" content="Shipping Services in Dubai | About INC SHIPPING" />
-    <meta property="twitter:description"
-        content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/about" />
+<meta property="twitter:title" content="Shipping Services in Dubai | About INC SHIPPING" />
+<meta property="twitter:description" content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20310.webp" />
+
 
 
     <!-- Google Tag Manager -->
