--- a/air-freight.html
+++ b/air-freight.html
@@ -54,21 +54,20 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Air Freight Company in Dubai | International Freight Shipping" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/air-freight" />
-    <meta property="og:description" content="Leading air freight company in Dubai offering international freight shipping
-        services. Reliable, efficient logistics solutions tailored to your needs." />
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/air-freight" />
+<meta property="og:title" content="Air Freight Forwarding Company in Dubai | International Freight Shipping" />
+<meta property="og:description" content="Leading Air Freight Forwarding Company in Dubai offering International Freight Shipping Services. Reliable, efficient Logistics solutions tailored to your needs." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20371.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/air-freight" />
-    <meta property="twitter:title" content="Air Freight Company in Dubai | International Freight Shipping" />
-    <meta property="twitter:description"
-        content="Leading air freight company in Dubai offering international freight shipping services. Reliable, efficient logistics solutions tailored to your needs." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/air-freight" />
+<meta property="twitter:title" content="Air Freight Forwarding Company in Dubai | International Freight Shipping" />
+<meta property="twitter:description" content="Leading Air Freight Forwarding Company in Dubai offering International Freight Shipping Services. Reliable, efficient Logistics solutions tailored to your needs." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20371.webp" />
+
+
 
 
 
