--- a/contact.html
+++ b/contact.html
@@ -55,21 +55,21 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content=INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE>
-    <meta property="og:site_name" content=INC Express Shipping L.L.C>
-    <meta property="og:url" content="https://incshipping.com/contact">
-    <meta property="og:description"
-        content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/contact" />
+<meta property="og:title" content=" INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE" />
+<meta property="og:description" content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
+<meta property="og:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/contact" />
-    <meta property="twitter:title" content="INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE" />
-    <meta property="twitter:description"
-        content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/contact" />
+<meta property="twitter:title" content=" INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE" />
+<meta property="twitter:description" content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs.
+" />
+<meta property="twitter:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
+
+
 
 
 
