--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -54,22 +54,20 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
-    <meta property="og:site_name" content=INC Express Shipping L.L.C>
-    <meta property="og:url" content="https://incshipping.com/corporate-courier" />
-    <meta property="og:description" content="INC Express is a leading courier company in Dubai, offering seamless
-        corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/corporate-courier" />
+<meta property="og:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
+<meta property="og:description" content="INC Express is a leading Courier Company in Dubai, offering seamless corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20384.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/corporate-courier" />
-    <meta property="twitter:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
-    <meta property="twitter:description"
-        content="INC Express is a leading Courier Company in Dubai, offering seamless corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/corporate-courier" />
+<meta property="twitter:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
+<meta property="twitter:description" content="INC Express is a leading Courier Company in Dubai, offering seamless corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20384.webp" />
+
 
 
 
