--- a/cross-trade.html
+++ b/cross-trade.html
@@ -54,22 +54,20 @@ Road Freight Services in Dubai " />
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/cross-trade" />
-    <meta property="og:description" content="Cross Trade Service Company in Dubai: Expert global transport solutions via
-        air, sea, or road. Simplify international trade with our comprehensive and professional services." />
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/cross-trade" />
+<meta property="og:title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
+<meta property="og:description" content="Cross Trade Service Company in Dubai: Expert global transport solutions via air, sea, or road. Simplify international trade with our comprehensive and professional services." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20382.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/cross-trade" />
-    <meta property="twitter:title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
-    <meta property="twitter:description"
-        content="Cross Trade Service Company in Dubai: Expert global transport solutions via air, sea, or road. Simplify international trade with our comprehensive and professional services." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/cross-trade" />
+<meta property="twitter:title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
+<meta property="twitter:description" content="Cross Trade Service Company in Dubai: Expert global transport solutions via air, sea, or road. Simplify international trade with our comprehensive and professional services." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20382.webp" />
+
 
 
 
