--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -54,22 +54,21 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/customs-clearance" />
-    <meta property="og:description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring
-        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/customs-clearance" />
+<meta property="og:title" content=" Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
+<meta property="og:description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20390.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/customs-clearance" />
-    <meta property="twitter:title" content="Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
-    <meta property="twitter:description"
-        content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/customs-clearance" />
+<meta property="twitter:title" content=" Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
+<meta property="twitter:description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20390.webp" />
+
+
 
 
 
