--- a/dangerous-goods.html
+++ b/dangerous-goods.html
@@ -55,22 +55,21 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/dangerous-goods" />
-    <meta property="og:description"
-        content="INC Shipping's experienced team specializes in safely transporting hazardous items with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with all rules and regulations." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="">
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/dangerous-goods" />
+<meta property="og:title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
+<meta property="og:description" content="INC Shipping's experienced team specializes in safely transporting hazardous items with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with all rules and regulations." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20392.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/shipment-to-far-east" />
-    <meta property="twitter:title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
-    <meta property="twitter:description"
-        content="INC Shipping's experienced team specializes in safely transporting hazardous items with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with all rules and regulations." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/dangerous-goods" />
+<meta property="twitter:title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
+<meta property="twitter:description" content="INC Shipping's experienced team specializes in safely transporting hazardous items with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with all rules and regulations." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20392.webp" />
+
+
 
 
 
