--- a/healthcare.html
+++ b/healthcare.html
@@ -53,22 +53,20 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/healthcare" />
-    <meta property="og:description"
-        content="Secure and efficient Healthcare Instrument Shipping in Dubai. INC Shipping ensures the safe and timely delivery of crucial healthcare devices and supplies." />
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/healthcare" />
+<meta property="og:title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
+<meta property="og:description" content="Secure and efficient Medical Equipment Shipping Dubai.INC Shipping ensures the safe and timely delivery of crucial healthcare devices and supplies." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20385.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/healthcare" />
-    <meta property="twitter:title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
-    <meta property="twitter:description"
-        content="Secure and efficient Medical Equipment Shipping Dubai.INC Shipping ensures the safe and timely delivery of crucial healthcare devices and supplies." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/healthcare" />
+<meta property="twitter:title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
+<meta property="twitter:description" content="Secure and efficient Medical Equipment Shipping Dubai.INC Shipping ensures the safe and timely delivery of crucial healthcare devices and supplies." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20385.webp" />
+
 
 
 
