--- a/index.html
+++ b/index.html
@@ -51,22 +51,21 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Best Logistics and Shipping Company in Dubai UAE | INC SHIPPING" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C">
-    <meta property="og:url" content=https://incshipping.com />
-    <meta property="og:description" content="INC Express Shipping LLC excels in its name as the Best Logistics and
-        Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/" />
+<meta property="og:title" content="Best Logistics and Shipping Company in Dubai, UAE | INC SHIPPING" />
+<meta property="og:description" content="INC Express Shipping LLC excels in its name as the Best Logistics and Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
+<meta property="og:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/" />
-    <meta property="twitter:title" content="Best Logistics and Shipping Company in Dubai UAE | INC SHIPPING" />
-    <meta property="twitter:description"
-        content="INC Express Shipping LLC excels in its name as the Best Logistics and Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/" />
+<meta property="twitter:title" content="Best Logistics and Shipping Company in Dubai, UAE | INC SHIPPING" />
+<meta property="twitter:description" content="INC Express Shipping LLC excels in its name as the Best Logistics and Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
+<meta property="twitter:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
+
+
 
 
 
