--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -64,23 +64,22 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/international-freight-forwarders">
-    <meta property="og:description"
-        content="Efficient logistics and transportation company in Dubai, UAE, specializing in multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking. International Cargo Services.">
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+   
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/international-freight-forwarders" />
+<meta property="og:title" content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
+<meta property="og:description" content="Efficient logistics and transportation company in Dubai, UAE, specializing in multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking. International Cargo Services." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20404.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/international-freight-forwarders" />
-    <meta property="twitter:title"
-        content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
-    <meta property="twitter:description"
-        content="Efficient logistics and transportation company in Dubai, UAE, specializing in multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking. International Cargo Services." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/international-freight-forwarders" />
+<meta property="twitter:title" content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
+<meta property="twitter:description" content="Efficient logistics and transportation company in Dubai, UAE, specializing in multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking. International Cargo Services." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20404.webp" />
+
+
 
 
 
