--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -53,21 +53,19 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/pharma-shipment-handling" />
-    <meta property="og:description"
-        content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We prioritize the integrity of your pharmaceutical products during shipment and services.">
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/pharma-shipment-handling" />
+<meta property="og:title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
+<meta property="og:description" content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We prioritize the integrity of your pharmaceutical products during shipment and services." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20393.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/pharma-shipment-handling" />
-    <meta property="twitter:title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
-    <meta property="twitter:description"
-        content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We prioritize the integrity of your pharmaceutical products during shipment and services." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/pharma-shipment-handling" />
+<meta property="twitter:title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
+<meta property="twitter:description" content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We prioritize the integrity of your pharmaceutical products during shipment and services." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20393.webp" />
+
 
 
 
