--- a/project-cargo.html
+++ b/project-cargo.html
@@ -53,23 +53,20 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content=https://incshipping.com/project-cargo>
-    <meta property="og:description" content="INC Express provides superior Project Cargo Logistics in Dubai and cargo
-        services across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert
-        handling and technical skills." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/project-cargo" />
+<meta property="og:title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
+<meta property="og:description" content="INC Express provides superior Project Cargo Logistics in Dubai and cargo services across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert handling and technical skills." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20389.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/project-cargo" />
-    <meta property="twitter:title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
-    <meta property="twitter:description"
-        content="INC Express provides superior Project Cargo Logistics in Dubai and cargo services across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert handling and technical skills." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/project-cargo" />
+<meta property="twitter:title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
+<meta property="twitter:description" content="INC Express provides superior Project Cargo Logistics in Dubai and cargo services across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert handling and technical skills." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20389.webp" />
+
 
 
 
