--- a/road-freight.html
+++ b/road-freight.html
@@ -53,21 +53,20 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/road-freight" />
-    <meta property="og:description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC
-        SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/road-freight" />
+<meta property="og:title" content=" Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
+<meta property="og:description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
+<meta property="og:image" content="https://incshipping.com/img/Group%20378.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/road-freight" />
-    <meta property="twitter:title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
-    <meta property=" twitter:description"
-        content="Discover reliable Road Freight Forwarding Services in Dubai with INC SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/road-freight" />
+<meta property="twitter:title" content=" Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
+<meta property="twitter:description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20378.webp" />
+
+
 
 
 
