--- a/sea-freight.html
+++ b/sea-freight.html
@@ -53,22 +53,21 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Sea Freight Company in Dubai | INC Shipping Services" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content=https://incshipping.com/sea-freight>
-    <meta property="og:description" content="Reliable Sea Freight Forwarding Company in Dubai offering efficient,
-        cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/sea-freight" />
+<meta property="og:title" content="Sea Freight Forwarding Company in Dubai | INC Shipping Services" />
+<meta property="og:description" content="Reliable Sea Freight Forwarding Company in Dubai offering efficient, cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
+<meta property="og:image" content="https://incshipping.com/img/Group%20377.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/sea-freight" />
-    <meta property="twitter:title" content="Sea Freight Company in Dubai | INC Shipping Services" />
-    <meta property="twitter:description"
-        content="Reliable Sea Freight Forwarding Company in Dubai offering efficient, cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/sea-freight" />
+<meta property="twitter:title" content="Sea Freight Forwarding Company in Dubai | INC Shipping Services" />
+<meta property="twitter:description" content="Reliable Sea Freight Forwarding Company in Dubai offering efficient, cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20377.webp" />
+
+
 
 
 
