--- a/services.html
+++ b/services.html
@@ -52,20 +52,22 @@
 <meta name="geo.position" content="25.3;55.4" />
 <meta name="ICBM" content="25.3, 55.4" />
 
+
 <!-- Open Graph / Facebook -->
-<meta property="og:title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services" />
-<meta property="og:site_name" content="INC Express Shipping L.L.C"/>
-<meta property="og:url" content="https://incshipping.com/services">
-<meta property="og:description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer."/>
-<meta property="og:type" content="website"/>
-<meta property="og:image" content="/">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/services" />
+<meta property="og:title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services " />
+<meta property="og:description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer." />
+<meta property="og:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
 
 <!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image"/>
-<meta property="twitter:domain" content="incshipping.com"/>
-<meta property="twitter:url" content="https://incshipping.com/services"/>
-<meta name="twitter:title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services "/>
-<meta name="twitter:description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer"/>
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/services" />
+<meta property="twitter:title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services " />
+<meta property="twitter:description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer." />
+<meta property="twitter:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
+
+
 
 
 
