--- a/shipment-to-far-east.html
+++ b/shipment-to-far-east.html
@@ -53,21 +53,20 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content=https://incshipping.com/shipment-to-far-east />
-    <meta property="og:description"
-        content="Efficient and reliable international shipment service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/shipment-to-far-east" />
+<meta property="og:title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
+<meta property="og:description" content="Efficient and reliable International Shipment Service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20383.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/shipment-to-far-east" />
-    <meta property="twitter:title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
-    <meta property="twitter:description"
-        content="Efficient and reliable international shipment service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/shipment-to-far-east" />
+<meta property="twitter:title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
+<meta property="twitter:description" content="Efficient and reliable International Shipment Service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20383.webp" />
+
+
 
 
 
