--- a/temprature-controlled-cargo.html
+++ b/temprature-controlled-cargo.html
@@ -52,23 +52,20 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/temprature-controlled-cargo" />
-    <meta property="og:description"
-        content="Reliable Temperature Control Cargo Service in Dubai ensures the safe
-        transport for sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+  <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/temprature-controlled-cargo" />
+<meta property="og:title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
+<meta property="og:description" content="Reliable Temperature Control Cargo Service in Dubai ensures the safe transport for sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20380.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/temprature-controlled-cargo" />
-    <meta property="twitter:title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
-    <meta property=" twitter:description"
-        content="Reliable Temperature Control Cargo Service in Dubai ensures the safe transport for sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/temprature-controlled-cargo" />
+<meta property="twitter:title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
+<meta property="twitter:description" content="Reliable Temperature Control Cargo Service in Dubai ensures the safe transport for sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20380.webp" />
+
 
 
 
