--- a/warehousing.html
+++ b/warehousing.html
@@ -51,22 +51,20 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider">
-    <meta property="og:site_name" content="INC Express Shipping L.L.C">
-    <meta property="og:url" content=https://incshipping.com/warehousing>
-    <meta property="og:description"
-        content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/warehousing" />
+<meta property="og:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
+<meta property="og:description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20387.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/warehousing" />
-    <meta property="twitter:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
-    <meta property="twitter:description"
-        content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/warehousing" />
+<meta property="twitter:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
+<meta property="twitter:description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20387.webp" />
+
 
 
 
