--- a/channel-partner.html
+++ b/channel-partner.html
@@ -54,23 +54,21 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Best Courier Channel Partners In Dubai | INC Shipping" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/channel-partner" />
-    <meta property="og:description"
-        content="INC Express is recognized as one of the best courier channel partners in
-        Dubai, offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+  <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/channel-partner" />
+<meta property="og:title" content="Best Courier Channel Partners in Dubai | INC Shipping" />
+<meta property="og:description" content="INC Express is recognized as one of the Best Courier Channel Partners in Dubai, offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20333.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/channel-partner" />
-    <meta property="twitter:title" content="Best Courier Channel Partners In Dubai | INC Shipping" />
-    <meta property="twitter:description"
-        content="INC Express is recognized as one of the best courier channel partners in Dubai, offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/channel-partner" />
+<meta property="twitter:title" content="Best Courier Channel Partners in Dubai | INC Shipping" />
+<meta property="twitter:description" content="INC Express is recognized as one of the Best Courier Channel Partners in Dubai, offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20333.webp" />
+
+
 
 
 
