--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -53,21 +53,20 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content=https://incshipping.com/privacy-policy />
-    <meta property="og:description"
-        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/privacy-policy" />
+<meta property="og:title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
+<meta property="og:description" content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
+<meta property="og:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/privacy-policy" />
-    <meta property="twitter:title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
-    <meta property="twitter:description"
-        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/privacy-policy" />
+<meta property="twitter:title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
+<meta property="twitter:description" content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
+<meta property="twitter:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
+
+
 
 
 
