--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -52,24 +52,20 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE">
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/terms-and-conditions" />
-    <meta property="og:description"
-        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy.                
-Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/terms-and-conditions" />
+<meta property="og:title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
+<meta property="og:description" content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
+<meta property="og:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/terms-and-conditions" />
-    <meta property="twitter:title"
-        content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
-    <meta property="twitter:description"
-        content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/terms-and-conditions" />
+<meta property="twitter:title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
+<meta property="twitter:description" content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
+<meta property="twitter:image" content="https://incshipping.com/img/inc_nav_logo.webp" />
+
 
 
 
